# mgb64

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  Makefile  NOTICE.md  PORT.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  THIRD_PARTY.md  pm-Goldeneye007.sh
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  build_failure.md  config.yml  parity_report.md  platform_validation.md  provenance_cleanup.md  validation_task.md
.github/workflows/: ci.yml  macos-release.yml  release.yml  web-demo.yml  windows-validate.yml
assets/decor/: .gitignore  build_models.sh  surface1.decor.txt
assets/obseg/: file_resource_table.inc.c
baselines/: perf_census_baseline.csv
baselines/tapes/: bunker1_traverse.expected.json  bunker1_traverse.ge7tape  dam_ak47_sustained.expected.json  dam_ak47_sustained.ge7tape  dam_combat_guard6.expected.json  dam_combat_guard6.ge7tape  dam_forward_30s.expected.json  dam_forward_30s.ge7tape  facility_traverse.expected.json  facility_traverse.ge7tape  runway_traverse.expected.json  runway_traverse.ge7tape  surface1_traverse.expected.json  surface1_traverse.ge7tape
cmake/: mingw-w64-x86_64.cmake  webgpu.cmake
docs/: ADS_PLAN.md  APP_ARCHITECTURE.md  AUDIO_QUALITY_PLAN.md  BACKEND_DEPRECATION_PLAN.md  BACKLOG_v0.4.0.md  BUILDING.md  CINEMATICS.md  CODING_STYLE.md  COMBAT_DEFERRED_PLAN.md  COMBAT_GLIDEPATH.md  COMBAT_NEXT_SESSION_PLAN.md  DAM_PLAYABILITY_REVIEW.md  DISPLAY_INPUT_PLAN.md  DOCS_INVENTORY.md  ENV_FLAGS.md  FRAME_TIMING_ARCHITECTURE.md  GITHUB_REPO_REPLACEMENT.md  GLASS_SHARDS_WIP.md  INSTRUMENTATION.md  METAL_BACKEND_PLAN.md  MODERN_MINIMAP_PLAN.md  MULTIPLAYER_PLAN.md  NATIVE_PLAYABILITY_GUARD_STATUS.md  NETPLAY_PLAN.md  NETPLAY_PLAN_REVIEW.md  NETPLAY_PORT_MAP.md  PERFORMANCE_PLAN.md  PHASE2_PLAN.md  PORTING_AND_EXPANSION.md  PORT_CODE_AUDIT_2026-07-03.md  PROVENANCE_AUDIT.md  PUBLIC_LAUNCH_READINESS.md  README.md  RECOMP_LANDSCAPE_SURVEY_2026-07-10.md  RELEASE_CHECKLIST.md  RELEASE_RUNBOOK.md  RELEASING.md  REMASTER_PHASE0_PLAN.md  REMASTER_PHASE1_PLAN.md  REMASTER_ROADMAP.md  (+14 more)
docs/audit/: DAM_PARITY_DEEP_DIVE_2026-07-17.md  DAM_PARITY_HUNT_2026-07-17.md  DAM_RENDER_DEEP_DIVE_2026-07-18.md  HARNESS_STRATEGY.md  PERF_BACKLOG_2026-07-17.md  PERF_REVIEW_WEB_NATIVE_2026-07-17.md  PRIORITIZATION.md  README.md
docs/design/: AUDIO_QUALITY_PLAN.md  COMBAT_DEFERRED_PLAN.md  COMBAT_GLIDEPATH.md  DISPLAY_INPUT_PLAN.md  FAITHFULNESS_S_TIER_PLAN.md  FIDELITY_EXECUTION_PROMPT.md  FIDELITY_REVIEW_AND_PLAN_2026-07-10.md  INTRO_OUTRO_LEDGER.md  MULTIPLAYER_PLAN.md  NETPLAY_PLAN.md  NETPLAY_PORT_MAP.md  PERFORMANCE_PLAN.md  PERF_005_ASYNC_PIPELINE_DESIGN.md  (+6 more)
include/: assert.h  bstring.h  decor.h  gbi_extension.h  limits.h  math.h  sgidefs.h  stdarg.h  stddef.h  stdlib.h  string.h  svr4_math.h  ultra64.h
ld/: lib.bss.ld.inc  lib.data.ld.inc  lib.rodata.ld.inc  lib.text.ld.inc
macos/: BRANDING.md  README.md
scripts/: check_github_launch_ready.sh  configure_github_launch_settings.sh  create_public_launch_repo.sh  install_git_hooks.sh  intro_regression_check.sh  make_public_source_archive.sh  package_linux_appimage.sh  package_windows_zip.sh  prepare_github_launch_evidence.sh  prepare_public_launch_bundle.sh  publish_public.sh  release.sh  release_preflight.sh  smoke_public_source_archive.sh  wrap_png_as_ico.sh
src/: aicommands.def  aicommands2.h  audi.c  audi.h  bondaicommands.h  bondconstants.h  bondgame.h  bondtypes.h  boot.h  bootcode.s  boss.c  boss.h  cfb.c  crash.c  deb.c  debugmenu.c  fr.c  init.c  joy.c  joy.h  mema.c  mema.h  memp.c  memp.h  music.c  music.h  pi.c  ramrom.c  ramrom.h  random.c  random.h  rmon.c  rmon.h  sched.c  sched.h  snd.c  snd.h  speed_graph.c  speed_graph.h  sprintf.c  (+7 more)
tests/: test_aimbone_dispatch.c  test_ammo_icon_anchor.c  test_app_config.cpp  test_arg_triage.cpp  test_audio_fx_params.c  test_audio_fx_params_stubs.c  test_audio_queue_controller.c  test_autoaim_score.c  test_bg_impact_guard.c  test_binding_conflict.c  test_chrobj_detonate.c  test_chrobj_impact_suppress.c  test_config_env_shadow.c  test_config_save_result.c  test_config_staging.c  test_env_ownership.cpp  test_fire_rate_authentic.c  test_fp_weapon_perspnorm.c  test_gamepad_menu_conflict.c  test_gfx_ptr_registry.c  test_glass_shot_depth.c  test_hull_builder.c  test_hull_vertex_clamp.c  test_input_tape.c  test_launch_intent.cpp  test_launcher_seed.cpp  test_mp_beam_rawcast.c  test_mp_healthbar_gate.c  test_mp_respawn_tail.c  test_msaa_sample_count.c  test_palette_decode.c  test_port_env.c  test_projectile_endpoint_clamp.c  test_radial_deadzone.c  test_rom_scan.cpp  test_rom_validate.cpp  test_room_normals.c  test_save_status.c  test_screenshot_series.c  test_settex_cache_key.c  (+20 more)
tools/: 1172compress.sh  1172inflate.sh  Makefile  README.md  ads_pose_capture.sh  ammo_crate_collect_smoke.sh  ammo_hud_mpmenu_smoke.sh  ammo_hud_smoke.sh  analyze_glass_center_handoff.py  analyze_intro_body.py  analyze_room_glass_contribution_scalar.py  analyze_room_glass_required_source.py  analyze_room_glass_source_reconstruction.py  analyze_stock_rdp_command_stream.py  analyze_stock_rdp_pixel_probe.py  analyze_stock_rdp_texture_candidates.py  ares_startup_audio_reference.sh  asan_smoke.sh  assert_stub_hits_zero.py  audio_ab_gate.sh  audit_ammo_hud_capture.py  audit_damage_hud_capture.py  audit_hidden_guard_contract.py  audit_intro_trace.py  audit_knife_impact.py  audit_minimap_dump.py  audit_oracle_trace.py  audit_render_trace.py  audit_screenshot_health.py  audit_startup_trace.py  bunker_brightness_regression.sh  camera_basis_regression.sh  camera_shutter_regression.sh  campaign_route_smoke.py  campaign_route_smoke.sh  check_bg_visibility_opcode_table.py  check_github_branch_protection.py  check_github_public_commit_refs.py  check_glass_center_handoff_regression.py  check_glass_handoff_points_regression.py  (+168 more)
web/: index.html  mgb64-shell.js  style.css  sw.js
windows/: mgb64.rc
(+947 files in other folders)
